kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-lev
  name: php-lev
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: php-lev
  sessionAffinity: None
  type: ClusterIP
