kubernetes-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: php-lev-mycompany-com
spec:
  rules:
  - host: php-lev.mycompany.com
    http:
      paths:
      - backend:
          serviceName: php-lev
          servicePort: 80
  tls:
  - hosts:
    - php-lev.mycompany.com
    secretName: php-lev.mycompany.com-tls
